@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
left to right direction
skinparam padding 2
skinparam ranksep 100
skinparam classFontSize 18

class Administrator
class Company{
designation
}
class VaccinationCenter{
name
address
phoneNumber
emailAddress
faxNumber
websiteAddress
openingHours
closingHours
slotDuration
maxNumberVaccines
}
class VaccineType{
code
designation
whold
}
class Vaccine
{
-id
-name
-List<AdministrationProcess> listAdministrationProcess;
}
class Platform
{
-description
}


Platform "1" -- "*" VaccinationCenter : register in <
Company "1"--"1" Administrator : has >
Company "1"--"1" Platform : manages >
VaccinationCenter -- Vaccine : applies >
Vaccine -- VaccineType: is of >
@enduml